--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <nav>
   <ul>
     <li><%= link_to('Home', teams_path) %></li>
+    <li><%= link_to('Player List', players_path) %></li>
     <li><%= link_to('Add Team', new_team_path) %></li>
   </ul>
 </nav>
